# volcanic

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  PKGBUILD  README.md
autotests/: CMakeLists.txt  backend_consistency_test.cpp  item_renderer_test.cpp  render_target_test.cpp  surface_texture_test.cpp  test_colorspaces.cpp  test_cursor_shape.cpp  test_debug.cpp  test_electric_border.cpp  test_ftrace.cpp  test_placement_policy.cpp  test_quick_tile.cpp  test_xkb.cpp  testutils.h  texture_format_test.cpp  vulkan_format_test.cpp  vulkan_offscreen_effect_test.cpp  vulkan_pipeline_test.cpp  vulkan_render_node_test.cpp  vulkan_surface_texture_test.cpp
autotests/integration/: CMakeLists.txt  keyboard_input_test.cpp  keyboard_layout_test.cpp  no_global_shortcuts_test.cpp  quick_tiling_test.cpp  tabbox_test.cpp  touch_input_test.cpp  xdgshellwindow_rules_test.cpp
autotests/integration/effects/: scripted_effects_test.cpp
data/: org_kde_kwin.categories
doc/: TESTING.md
doc/windowspecific-x11/: index.docbook
po/af/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcmkwm_x11.po  kwin_x11.po
po/ar/: kcm_animations_x11.po  kcm_kwin_effects_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/as/: kwin_x11.po
po/ast/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwm_x11.po  kwin_x11.po
po/az/: kcm_kwin_effects_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwm_x11.po  kwin_x11.po
po/be/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwm_x11.po  kwin_x11.po
po/be@latin/: kwin_x11.po
po/bg/: kcm_animations_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwm_x11.po  kwin_x11.po
po/bn/: kcmkwm_x11.po  kwin_x11.po
po/bn_IN/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcmkwm_x11.po  kwin_x11.po
po/br/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcmkwm_x11.po  kwin_x11.po
po/bs/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwm_x11.po  kwin_x11.po
po/ca/: kcm_animations_x11.po  kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/ca@valencia/: kcm_animations_x11.po  kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincommon_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/cs/: kcm_animations_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwm_x11.po  kwin_x11.po
po/csb/: kwin_x11.po
po/cy/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcmkwm_x11.po  kwin_x11.po
po/da/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwm_x11.po  kwin_x11.po
po/de/: kcm_animations_x11.po  kcm_kwin_effects_x11.po  kcm_kwin_scripts_x11.po  kcm_kwin_virtualdesktops_x11.po  kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kcm_kwintabbox_x11.po  kcmkwincompositing_x11.po  kcmkwinscreenedges_x11.po  kcmkwm_x11.po  kwin_x11.po
po/el/: kcm_kwindecoration_x11.po  kcm_kwinrules_x11.po  kwin_x11.po  (+3 more)
src/: CMakeLists.txt  activation.cpp  activities.cpp  activities.h  atoms.h  client_machine.cpp  client_machine.h  compositor.cpp  compositor.h  compositor_x11.cpp  compositor_x11.h  config-kwin.h.cmake  cursor.cpp  cursorsource.cpp  cursorsource.h  dbusinterface.cpp  debug_console.cpp  debug_console.h  dpmsinputeventfilter.cpp  events.cpp  globalshortcuts.cpp  globalshortcuts.h  group.h  idle_inhibition.cpp  input.cpp  inputmethod.cpp  inputmethod.h  keyboard_input.cpp  keyboard_repeat.cpp  keyboard_repeat.h  killprompt.cpp  kwin-x11.notifyrc  layers.cpp  main.cpp  main.h  netinfo.h  options.cpp  options.h  org.kde.kwin.InputDevice.xml  outputconfigurationstore.cpp  (+27 more)
src/helpers/killer/: CMakeLists.txt  killer.cpp  org.kde.kwin_x11.killer.desktop.in
src/platformsupport/scenes/vulkan/: CMakeLists.txt  vma_usage.h  vulkanbackend.cpp  vulkanbackend.h  vulkanbuffer.cpp  vulkanbuffer.h  vulkancontext.cpp  vulkancontext.h  vulkanframebuffer.cpp  vulkanframebuffer.h  vulkangpurendertimequery.cpp  vulkangpurendertimequery.h  vulkankawaseblur.cpp  vulkankawaseblur.h  vulkankawaseblur_spv.inc  vulkanpipeline.cpp  vulkanpipeline.h  vulkanpipelinemanager.cpp  vulkanpipelinemanager.h  vulkanpresenttimingmonitor.cpp  vulkanpresenttimingmonitor.h  vulkanrenderpass.cpp  vulkanrenderpass.h  vulkanrendertarget.cpp  vulkanrendertarget.h  vulkansurfacetexture.cpp  vulkansurfacetexture.h  vulkansurfacetexture_x11.cpp  vulkansurfacetexture_x11.h  vulkanswapchain.cpp  vulkanswapchain.h  vulkantexture.cpp  vulkantexture.h  vulkanthumbnailatlas.cpp  vulkanthumbnailatlas.h
src/platformsupport/scenes/vulkan/shaders/: basic.vert  main.frag
src/plugins/backgroundcontrast/: CMakeLists.txt  contrast.cpp  contrast.h  contrastshader.cpp
src/plugins/cube/kcm/: CMakeLists.txt
src/plugins/overview/: CMakeLists.txt  main.cpp  metadata.json  overvieweffect.cpp  overvieweffectv2.cpp  overvieweffectv2.h
src/plugins/overview/kcm/: overvieweffectkcm.ui
src/plugins/overview/qml/: DesktopBar.qml  main.qml
src/plugins/overview/shaders/: overview_quad.frag  overview_quad.frag.spv  overview_quad.vert  overview_quad.vert.spv  overview_quad_spv.h  overview_quad_spv.inc  regen_spv_inc.sh  wallpaper_blur.vert  wallpaper_blur_ds.frag  wallpaper_blur_ds.frag.spv  wallpaper_blur_spv.inc  wallpaper_blur_us.frag  wallpaper_blur_us.frag.spv
src/plugins/overview/v2/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
(+744 files in other folders)
